--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "web3": "^1.0.0-beta.37",
-    "rlp": "latest",
-    "superagent": "latest"
+    "rlp": "latest"
   }
 }
